fix issue with cta buttons on mobile screen

--- a/source/stylesheets/partials/_home.scss
+++ b/source/stylesheets/partials/_home.scss
@@ -23,9 +23,14 @@
 
     button {
       margin-left: em(24);
+      width: 200px;
     }
     form {
+      text-align: center;
+      margin-bottom: em(24);
+      @include media($medium-screen) {
       float: left;
+      }
     }
   }
 }
